fix: search dialog content not showing

--- a/apps/docs/src/styles/custom.css
+++ b/apps/docs/src/styles/custom.css
@@ -33,6 +33,48 @@ a {
   text-decoration: none;
 }
 
+/* Search */
+/* stylelint-disable-next-line selector-id-pattern -- overriding starlight search */
+#starlight__search {
+  --pagefind-ui-background: var(--color-linen-100);
+  --pagefind-ui-border: var(--color-linen-300);
+
+  .pagefind-ui__form {
+    input:focus {
+      outline: var(--color-beige-950) solid 2px;
+      outline-offset: var(--spacing-2);
+  
+      --pagefind-ui-border: transparent;
+    }
+
+    .pagefind-ui__search-clear {
+      &::before {
+        background-color: var(--color-beige-950);
+      }
+    }
+  }
+
+  .pagefind-ui__result-nested::before {
+    background-color: var(--color-linen-900);
+    opacity: 0.2;
+  }
+
+  .pagefind-ui__message {
+    font: var(--label-sm);
+  }
+
+  .pagefind-ui__result-inner {
+    background-color: var(--color-linen-100);
+    border-radius: var(--radius-8);
+    gap: 0;
+    overflow: hidden;
+
+    & > * {
+      background-color: transparent;
+    }
+  }
+
+}
 
 /* Components */
 
@@ -170,6 +212,10 @@ body:not(:has(nav.sidebar + .main-frame)) {
     font: var(--title-h6);
     letter-spacing: var(--title-h6-spacing);
   }
+}
+
+dialog {
+  min-height: unset !important;
 }
 
 /* Set the body's style in docs pages */
